# Qwen3.cpp

./: .gitignore  CMakeLists.txt  README.md  plan.md  pyproject.toml
.github/workflows/: windows-ci.yml
config/: default.psd1  isolated.psd1
docs/: ARCHITECTURE.md  BASELINE.md  REFACTOR_PLAN.md
ggml/: .gitignore  CMakeLists.txt
ggml/cmake/: FindNCCL.cmake  GitVars.cmake  common.cmake  ggml-config.cmake.in
ggml/include/: ggml-cpp.h
ggml/src/: CMakeLists.txt  ggml-backend-core.cpp  ggml-backend-cpu.cpp  ggml-backend-sched.cpp  ggml-core.c  ggml-graph.c  ggml-minimal-stubs.cpp  ggml-ops.c  ggml-stubs.c
ggml/src/ggml-cpu/: CMakeLists.txt  binary-ops.cpp  ggml-cpu-kernel.c  ggml-cpu.cpp  ops.cpp  ops.h
ggml/src/ggml-cpu/amx/: amx.cpp  amx.h  common.h  mmq.cpp  mmq.h
ggml/src/ggml-cpu/cmake/: FindSIMD.cmake
ggml/src/ggml-cpu/kleidiai/: kernels.cpp  kernels.h  kleidiai.cpp  kleidiai.h
ggml/src/ggml-cpu/llamafile/: sgemm.cpp  sgemm.h
ggml/src/ggml-cpu/spacemit/: ime.cpp  ime.h  ime1_kernels.cpp  ime_kernels.h
ggml/src/ggml-sycl/: CMakeLists.txt  add-id.cpp  add-id.hpp  backend.hpp  binbcast.cpp  binbcast.hpp  common.cpp  common.hpp  concat.cpp  concat.hpp  conv.cpp  conv.hpp  convert.cpp  convert.hpp  count-equal.cpp  count-equal.hpp  cpy.cpp  cpy.hpp  dequantize.hpp  dmmv.cpp  dmmv.hpp  element_wise.cpp  element_wise.hpp  fattn-common.hpp  fattn-tile.cpp  fattn-tile.hpp  fattn-vec.hpp  fattn.cpp  fattn.hpp  gated_delta_net.cpp  gated_delta_net.hpp  gemm.hpp  getrows.cpp  getrows.hpp  ggml-sycl.cpp  gla.cpp  gla.hpp  im2col.cpp  im2col.hpp  mmq.cpp  (+41 more)
ggml/src/ggml-sycl/dpct/: helper.hpp
ggml/src/ggml-sycl/template-instances/: fattn-tile-instance-dkq112-dv112.cpp  fattn-tile-instance-dkq128-dv128.cpp  fattn-tile-instance-dkq256-dv256.cpp  fattn-tile-instance-dkq40-dv40.cpp  fattn-tile-instance-dkq512-dv512.cpp  fattn-tile-instance-dkq576-dv512.cpp  fattn-tile-instance-dkq64-dv64.cpp  fattn-tile-instance-dkq72-dv72.cpp  fattn-tile-instance-dkq80-dv80.cpp  fattn-tile-instance-dkq96-dv96.cpp  fattn-vec-instance-f16-f16.cpp  fattn-vec-instance-f16-q4_0.cpp  fattn-vec-instance-f16-q4_1.cpp  fattn-vec-instance-f16-q5_0.cpp  fattn-vec-instance-f16-q5_1.cpp  fattn-vec-instance-f16-q8_0.cpp  fattn-vec-instance-q4_0-f16.cpp  fattn-vec-instance-q4_0-q4_0.cpp  fattn-vec-instance-q4_0-q4_1.cpp  fattn-vec-instance-q4_0-q5_0.cpp  fattn-vec-instance-q4_0-q5_1.cpp  fattn-vec-instance-q4_0-q8_0.cpp  fattn-vec-instance-q4_1-f16.cpp  fattn-vec-instance-q4_1-q4_0.cpp  fattn-vec-instance-q4_1-q4_1.cpp  fattn-vec-instance-q4_1-q5_0.cpp  fattn-vec-instance-q4_1-q5_1.cpp  fattn-vec-instance-q4_1-q8_0.cpp  fattn-vec-instance-q5_0-f16.cpp  fattn-vec-instance-q5_0-q4_0.cpp  fattn-vec-instance-q5_0-q4_1.cpp  fattn-vec-instance-q5_0-q5_0.cpp  fattn-vec-instance-q5_0-q5_1.cpp  fattn-vec-instance-q5_0-q8_0.cpp  fattn-vec-instance-q5_1-f16.cpp  fattn-vec-instance-q5_1-q4_0.cpp  fattn-vec-instance-q5_1-q4_1.cpp  fattn-vec-instance-q5_1-q5_0.cpp  fattn-vec-instance-q5_1-q5_1.cpp  fattn-vec-instance-q5_1-q8_0.cpp  (+6 more)
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
ggml/src/ggml-vulkan/cmake/: host-toolchain.cmake.in
ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  abs.comp  acc.comp  add.comp  add1.comp  add_id.comp  arange.comp  argmax.comp  argsort.comp  argsort_large.comp  ceil.comp  clamp.comp  concat.comp  contig_copy.comp  conv2d_dw.comp  conv2d_mm.comp  conv_transpose_1d.comp  copy.comp  copy_from_quant.comp  copy_to_quant.comp  copy_transpose.comp  cos.comp  count_equal.comp  count_experts.comp  cumsum.comp  cumsum_multipass1.comp  cumsum_multipass2.comp  dequant_f32.comp  dequant_funcs.glsl  dequant_funcs_cm2.glsl  dequant_head.glsl  dequant_iq1_m.comp  dequant_iq1_s.comp  dequant_iq2_s.comp  dequant_iq2_xs.comp  dequant_iq2_xxs.comp  dequant_iq3_s.comp  dequant_iq3_xxs.comp  dequant_iq4_nl.comp  dequant_iq4_xs.comp  (+138 more)
ggml/src/ggml-vulkan/vulkan-shaders/feature-tests/: bfloat16.comp  coopmat.comp  coopmat2.comp  integer_dot.comp
include/: llama.h
runtime/: README.md
runtime/patches/: executorch_pybind_vulkan_overlay.patch
runtime/prompts/: perf_prompt.txt
runtime/tests/: shader_registry_smoke.cpp  vk_overlay_e2e.py
scripts/: bench.ps1  build_chatbot.ps1  convert-pytorch-to-q4_k_m.cmd  convert-pytorch-to-q4_k_m.ps1  doctor.ps1  export_sdpa_dynamic.ps1  find-unused-static.ps1  freeze_baseline.ps1  pack_runtime.ps1  perf_compare.ps1  qwen3.ps1  run-qwen3-cpu.cmd  run-qwen3-cpu.ps1  run-qwen3-sycl-gpu.cmd  run-qwen3-sycl-gpu.ps1  run-qwen3-vulkan.cmd  run-qwen3-vulkan.ps1  run.ps1  run_chatbot.ps1  setup-uv-env.cmd  setup-uv-env.ps1  setup_env.ps1  test-qwen3-determinism.cmd  test-qwen3-determinism.ps1  test-qwen3-sycl-gpu.cmd  test-qwen3-sycl-gpu.ps1  test-qwen3-vulkan.cmd  test-qwen3-vulkan.ps1  vendor_sync_runtime.ps1  vendor_sync_vulkan.ps1  vk_jit.py  vk_perf_compare.py  vk_pure_python.py  vk_python_bench.py  vk_runtime_jit.py
scripts/baselines/: cpu-determinism.stdout.txt  vulkan-gpu.stdout.txt
scripts/lib/: common.ps1
src/: CMakeLists.txt  llama-adapter.cpp  llama-adapter.h  llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-context.cpp  llama-context.h  llama-ext.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-kv-cells.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.h  llama-mmap.cpp  llama-mmap.h  llama-model-loader.cpp  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-sampler.cpp  llama-sampler.h  llama-vocab.cpp  llama-vocab.h  llama.cpp
src/models/: models.h  qwen3.cpp
tools/cli/: cli.cpp
tools/quantize/: CMakeLists.txt  quantize.cpp
vendor-executorch/: README.md
vendor-executorch/backends/vulkan/partitioner/: vulkan_partitioner.py
vendor-executorch/extension/pybindings/: portable_lib.py  pybindings.cpp  pybindings.pyi
vendor-runtime/: CMakeLists.txt  README.md
vendor-runtime/include/: runner.h
vendor-runtime/src/: chatbot_main.cpp  llama_tiktoken.cpp  runner.cpp
(+9 files in other folders)
